--- a/ArtistfyTF/src/main/resources/templates/artist/listArtists.html
+++ b/ArtistfyTF/src/main/resources/templates/artist/listArtists.html
@@ -75,6 +75,12 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/genres/list}">Genero</a>						
 					</div>
+						<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/users/list}">Usuarios</a>
+					</div>
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/roles/list}">Roles</a>
+					</div>
 				</div></li>
 
 
