--- a/ArtistfyTF/src/main/resources/templates/error.html
+++ b/ArtistfyTF/src/main/resources/templates/error.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Artistfy</title>
+<title>2020</title>
 
 <!-- Custom fonts for this template-->
 <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"
@@ -33,59 +33,40 @@
 		<ul
 			class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
 			id="accordionSidebar">
-
 			<!-- Sidebar - Brand -->
 			<a
 				class="sidebar-brand d-flex align-items-center justify-content-center"
-				th:href="@{/artists/list}">
-				<div class="sidebar-brand-icon">
-					<img th:src="@{/img/artistfy.png}" height="50" alt="logo"
-						align="middle"></img>
-					<!--  <i class="fas fa-leaf"></i> -->
-				</div> <!-- <div class="sidebar-brand-text mx-2">Programación en Web</div>-->
+				th:href="@{/categories/list}">
+				<div class="sidebar-brand-icon rotate-n-15">
+					<i class="fas fa-leaf"></i>
+				</div>
+				<div class="sidebar-brand-text mx-2">Programación en Web</div>
 			</a>
-
 
 			<!-- Divider -->
 			<hr class="sidebar-divider my-0">
 
 
-
-
 			<!-- Nav Item - Pages Collapse Menu -->
 			<li class="nav-item"><a class="nav-link collapsed" href="#"
-				data-target="#collapseTwo" aria-expanded=true
+				data-target="#collapseTwo" aria-expanded="false"
 				aria-controls="collapseTwo"> <i class="fas fa-fw fa-cog"></i> <span>Men&uacute;</span>
 			</a>
 				<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 					data-parent="#accordionSidebar">
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/artists/list}">Artistas</a>
+						<a class="collapse-item" th:href="@{/categories/list}">Categorías</a>
 					</div>
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/contracts/list}">Contratos</a>
+						<a class="collapse-item" th:href="@{/products/list}">Productos</a>
 					</div>
 					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/organizers/list}">Organizadores</a>
-					</div>
-					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/events/list}">Eventos</a>
-					</div>
-					<div class="bg-white py-2 collapse-inner rounded">
-						<a class="collapse-item" th:href="@{/genres/list}">Genero</a>						
-					</div>
-						<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/users/list}">Usuarios</a>
 					</div>
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/roles/list}">Roles</a>
 					</div>
 				</div></li>
-
-
-
-			<!-- Divider -->
-			<hr class="sidebar-divider">
 
 			<!-- Sidebar Toggler (Sidebar) -->
 
@@ -132,6 +113,7 @@
 								class="mr-2 d-none d-lg-inline text-gray-600 small"><img
 									th:src="@{/img/logout.png}" width="30" height="30" alt="logo"
 									align="middle"></img></span>
+
 						</a> <!-- Dropdown - User Information -->
 							<div
 								class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -140,8 +122,8 @@
 									class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Perfil
 								</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="artists/index"
-									data-toggle="modal" data-target="#logoutModal"> <i
+								<a class="dropdown-item" href="#" data-toggle="modal"
+									data-target="#logoutModal"> <i
 									class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
 									Cerrar sesión
 								</a>
@@ -155,70 +137,23 @@
 				<!-- Begin Page Content -->
 				<div class="container-fluid">
 
-					<!-- Page Heading -->
-					<h1 class="h3 mb-4 text-gray-800">Eventos</h1>
+					<div class="container">
 
-					<a th:href="@{/events/new/}" class="btn btn-secondary btn-xs">Nuevo</a>
+						<div class="card bg-danger text-white">
+							<div class="card-header">Acceso Denegado!</div>
+							<div class="card-body">
+								<h5 class="card-title">Los sentimos , NO tienes permisos
+									para acceder a este recurso.</h5>
+								<a th:href="@{/products/list}" class="btn btn-outline-light"
+									role="button">Ir al inicio</a>
 
-				<form th:action="@{/events/search}" method="post"
-						th:object="${event}">
-						<div class="form-group">
-							<table>
-
-								<tbody>
-									<tr>
-										<td><label for="name"
-											class="col-sm-2 col-form-label">Buscar:</label></td>
-										<td><input type="text" class="form-control"
-											th:field="*{name}" id="name"
-											placeholder="Nombre a buscar"></input></td>
-										<td><button type="submit" class="btn btn-danger">
-												<i class="iconf fa fa-search" style="color: white;"></i>
-											</button></td>
-										<td><a href="/events/list" class="btn btn-danger">Limpiar</a></td>
-									</tr>
-								</tbody>
-							</table>
+							</div>
 						</div>
-					</form>
+					</div>
 
-					<hr class="sidebar-divider">
-
-					<table class="table table-striped">
-						<thead class="thead-dark">
-							<tr>
-								<th scope="col">Id</th>
-								<th scope="col">Organizador</th>
-								<th scope="col">Nombre</th>
-								<th scope="col">Descripcion</th>
-								<th scope="col">Requisitos</th>
-								<th scope="col">Salario</th>
-								<th scope="col">FehaEvento</th>
-								<th scope="col">Operacion</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:each="e: ${listEvents}">
-								<td th:text="${e.idEvent}"></td>
-								<td th:text="${e.organizer.firstName}"></td>
-								<td th:text="${e.name}"></td>
-								<td th:text="${e.description}"></td>
-								<td th:text="${e.requeriments}"></td>
-								<td th:text="${e.offeredSalary}"></td>
-								<td th:text="${#dates.format(e.scheduleAt,'dd/MM/yyyy')}"></td>
-								<td><a th:href="@{'/events/delete/'+${e.idEvent}}"> <i
-										class="iconf fa fa-trash" style="color: red"></i>
-								</a> <a th:href="@{'/events/irupdate/'+${e.idEvent}}"> <i
-										class="iconf fa fa-pen" style="color: blue"></i>
-								</a></td>
-							</tr>
-						</tbody>
-					</table>
-					<p th:text="${mensaje}" class="form-text text-success"></p>
 
 				</div>
 				<!-- /.container-fluid -->
-
 
 			</div>
 			<!-- End of Main Content -->
@@ -258,12 +193,15 @@
 					</button>
 				</div>
 				<div class="modal-body">Seleccione "Cerrar sesión" a
-					continuación si está listo para finalizar su sesión actual.</div>
+					continuación si está listo para finalizar su sesión actual</div>
 				<div class="modal-footer">
-					<button class="btn btn-secondary" type="button"
-						data-dismiss="modal">Cancelar</button>
-					<a class="btn btn-primary" th:href="@{/artists/index}">Cerrar
-						sesión</a>
+					<form id="logoutForm" th:action="@{/logout}" method="post">
+						<button class="btn btn-danger"
+							onclick="document.getElementById('logoutForm').submit();"
+							type="submit">Cerrar</button>
+						<button class="btn btn-dark" type="button" data-dismiss="modal"
+							th:href="@{/categories/list}">Cancel</button>
+					</form>
 				</div>
 			</div>
 		</div>
