--- a/ArtistfyTF/src/main/resources/templates/organizer/listOrganizers.html
+++ b/ArtistfyTF/src/main/resources/templates/organizer/listOrganizers.html
@@ -72,6 +72,12 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<a class="collapse-item" th:href="@{/events/list}">Eventos</a>						
 					</div>
+						<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/users/list}">Usuarios</a>
+					</div>
+					<div class="bg-white py-2 collapse-inner rounded">
+						<a class="collapse-item" th:href="@{/roles/list}">Roles</a>
+					</div>
 				</div></li>
 
 
